--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,16 @@
 
     <groupId>main.db_ng</groupId>
     <artifactId>DB-NG</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.1</version>
+    <packaging>jar</packaging>
+
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <name>GitHub Packages</name>
+            <url>https://maven.pkg.github.com/NappiNicola/DB-NG</url>
+        </repository>
+    </distributionManagement>
 
 
     <dependencies>
